src/bundle/Resources/public/scss/fieldType/edit/_ezmedia.scss
.ibexa-field-edit--ezmedia {
    .ibexa-field-edit-preview {
        &__details {
            display: flex;
            flex-wrap: wrap;
        }

        &__file-name-wrapper,
        &__file-size-wrapper,
        &__control,
        &__settings {
            flex-basis: 50%;
            padding: calculateRem(8px);

            .ibexa-label {
                margin-top: 0;
                margin-bottom: 0;
            }
        }

        &__spinner {
            display: none;
        }

        &__media-wrapper--loading {
            .ibexa-field-edit-preview__spinner {
                display: inline-block;
                width: calculateRem(32px);
                height: calculateRem(32px);
            }

            .ibexa-field-edit-preview__media {
                display: none;
            }
        }

        &__info {
            & + .ibexa-field-edit-preview__info {
                margin-top: calculateRem(12px);
            }
        }

        &__dimensions {
            input[type='number'] {
                &.is-invalid {
                    @include input-invalid;

                    padding-right: calculateRem(12px);
                }
            }
        }
    }

    &.is-invalid {
        .ibexa-data-source {
            @include area-invalid();
        }
    }
}

